.archived/kubernetes/servitor/librechat/mongodb/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: librechat-mongodb-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: librechat-mongodb
  egress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat-app
            io.kubernetes.pod.namespace: servitor-apps
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP
